--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@lion/form": "^0.7.18",
     "@lion/input": "^0.11.1",
+    "@lion/localize": "^0.16.0",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0"
   },
@@ -60,5 +61,17 @@
       "prettier --write",
       "git add"
     ]
-  }
+  },
+  "main": "rollup.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Rajkumar-MP/FELearning-Transfer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Rajkumar-MP/FELearning-Transfer/issues"
+  },
+  "homepage": "https://github.com/Rajkumar-MP/FELearning-Transfer#readme"
 }
