--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
   "author": "fe-app",
   "license": "MIT",
   "dependencies": {
-    "lit-html": "^1.0.0",
-    "lit-element": "^2.0.1"
+    "@lion/form": "^0.8.1",
+    "lit-element": "^2.0.1",
+    "lit-html": "^1.0.0"
   },
   "eslintConfig": {
     "extends": [
