--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,8 @@ jobs:
         run: npm run lint
       - name: tests
         run: npm run test
-      - name: code coverage
-      - uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Codecov
+        uses: codecov/codecov-action@v1.2.1
         
   deploy:
     if: github.ref == 'refs/heads/master'
