--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ jobs:
         run: npm run lint
       - name: tests
         run: npm run test
+      - name: Codecov
+        uses: codecov/codecov-action@v1.2.1
         
   deploy:
     if: github.ref == 'refs/heads/master'
