--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "author": "fe-app",
   "license": "MIT",
   "dependencies": {
+    "@lion/button": "^0.8.10",
     "@lion/form": "^0.8.1",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0"
