--- a/package.json
+++ b/package.json
@@ -34,9 +34,15 @@
   "author": "fe-app",
   "license": "MIT",
   "dependencies": {
-    "@lion/form": "^0.8.1",
+    "@lion/fieldset": "^0.16.4",
+    "@lion/form": "^0.8.4",
+    "@lion/form-core": "^0.8.4",
+    "@lion/input": "^0.11.4",
+    "@lion/localize": "^0.16.1",
+    "@lion/tabs": "^0.6.1",
     "lit-element": "^2.0.1",
-    "lit-html": "^1.0.0"
+    "lit-html": "^1.0.0",
+    "save": "^2.4.0"
   },
   "eslintConfig": {
     "extends": [
