--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "license": "MIT",
   "dependencies": {
     "@lion/form": "^0.8.1",
+    "@lion/localize": "^0.16.1",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0"
   },
