--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
         run: npm run test
       - name: Codecov
         uses: codecov/codecov-action@v1.2.1
+        with:
+          target: 90%
         
   deploy:
     if: github.ref == 'refs/heads/master'
