--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
   "author": "fe-app",
   "license": "MIT",
   "dependencies": {
-    "@lion/button": "^0.8.10",
-    "@lion/form": "^0.8.1",
+
+    "@lion/button": "^0.8.11",
+    "@lion/form": "^0.7.18",
+    "@lion/input": "^0.11.1",
+    "@lion/localize": "^0.16.0",
+
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0"
   },
@@ -60,5 +64,17 @@
       "prettier --write",
       "git add"
     ]
-  }
+  },
+  "main": "rollup.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Rajkumar-MP/FELearning-Transfer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Rajkumar-MP/FELearning-Transfer/issues"
+  },
+  "homepage": "https://github.com/Rajkumar-MP/FELearning-Transfer#readme"
 }
