--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
   "author": "fe-app",
   "license": "MIT",
   "dependencies": {
-    "@lion/button": "^0.8.11",
+    "@lion/button": "^0.8.10",
     "@lion/form": "^0.7.18",
+    "@lion/form-core": "^0.8.4",
     "@lion/input": "^0.11.1",
     "@lion/localize": "^0.16.0",
+    "@lion/select": "^0.9.4",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0"
   },
