--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@lion/button": "^0.8.11",
     "@lion/form": "^0.7.18",
+    "@lion/form-core": "^0.8.4",
     "@lion/input": "^0.11.1",
     "@lion/localize": "^0.16.0",
     "lit-element": "^2.0.1",
