--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@lion/button": "^0.8.11",
     "@lion/form": "^0.7.18",
     "@lion/form-core": "^0.8.4",
-    "@lion/input": "^0.11.1",
-    "@lion/localize": "^0.16.0",
+    "@lion/input": "^0.11.4",
+    "@lion/localize": "^0.16.1",
     "lit-element": "^2.0.1",
-    "lit-html": "^1.0.0"
+    "lit-html": "^1.0.0",
+    "node-modules": "^1.0.1",
+    "webpack-dev-server": "^3.11.2"
   },
   "eslintConfig": {
     "extends": [
