--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@lion/form": "^0.7.18",
     "@lion/input": "^0.11.1",
     "@lion/localize": "^0.16.0",
+    "@vaadin/router": "^1.7.4",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0"
   },
