--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@lion/input": "^0.11.4",
     "@lion/localize": "^0.16.1",
     "@lion/tabs": "^0.6.1",
+    "@vaadin/router": "^1.7.4",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
     "save": "^2.4.0"
