--- a/package.json
+++ b/package.json
@@ -19,17 +19,14 @@
   "scripts": {
     "lint": "eslint --ext .js,.html . --ignore-path .gitignore && prettier \"**/*.js\" --check --ignore-path .gitignore",
     "format": "eslint --ext .js,.html . --fix --ignore-path .gitignore && prettier \"**/*.js\" --write --ignore-path .gitignore",
-
+    "test": "web-test-runner --coverage ",
     "test:watch": "web-test-runner --watch",
     "storybook": "web-dev-server -c .storybook/server.mjs",
     "storybook:build": "build-storybook",
     "build": "rimraf dist && rollup -c rollup.config.js",
     "ncu": "npm-check -u",
     "start:build": "npm run build && web-dev-server --root-dir dist --app-index index.html --open --compatibility none",
-    
-    "start": "SET NODE_ENV=dev && node ./bin/www",
-    "devstart": "SET NODE_ENV=dev && nodemon ./bin/www",
-    "test": "mocha --timeout 10000" 
+    "start": "web-dev-server"
   },
   "name": "fe-app",
   "version": "0.0.1",
