--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
     "@vaadin/router": "^1.7.4",
     "deep-equal": "^2.0.5",
     "lit-element": "^2.0.1",
-    "lit-html": "^1.0.0",
-    "node-modules": "^1.0.1",
-    "webpack-dev-server": "^3.11.2"
+    "lit-html": "^1.0.0"
   },
   "eslintConfig": {
     "extends": [
