--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "@lion/select": "^0.9.4",
     "@vaadin/router": "^1.7.4",
     "lit-element": "^2.0.1",
-    "lit-html": "^1.0.0",
-    "node-modules": "^1.0.1"
+    "lit-html": "^1.0.0"
+    
   },
   "eslintConfig": {
     "extends": [
