--- a/package.json
+++ b/package.json
@@ -34,15 +34,14 @@
   "author": "fe-app",
   "license": "MIT",
   "dependencies": {
-
-    "@lion/button": "^0.9.1",
+    "@lion/button": "^0.8.11",
     "@lion/fieldset": "^0.16.4",
     "@lion/form": "^0.8.4",
     "@lion/form-core": "^0.8.4",
     "@lion/input": "^0.11.4",
     "@lion/localize": "^0.16.1",
+    "@lion/select": "^0.9.4",
     "@lion/tabs": "^0.6.1",
-
     "@vaadin/router": "^1.7.4",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
