--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@lion/ajax": "^0.7.0",
     "@lion/button": "^0.8.11",
+    "@lion/core": "^0.14.1",
     "@lion/fieldset": "^0.16.4",
     "@lion/form": "^0.8.4",
     "@lion/form-core": "^0.8.4",
