--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@vaadin/router": "^1.7.4",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "sinon": "^9.2.4"
   },
   "eslintConfig": {
     "extends": [
