--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@lion/input": "^0.11.4",
     "@lion/localize": "^0.16.1",
     "@lion/select": "^0.9.4",
+    "@lion/steps": "^0.8.1",
     "@lion/tabs": "^0.6.1",
     "@vaadin/router": "^1.7.4",
     "lit-element": "^2.0.1",
